assets/src/components/base/ConnectorFields/ConnectorKeyvalue/ConnectorKeyvalue.css
.connector-keyvalue__label {
	font-weight: 600;
	padding-bottom: 500;
}

.connector-keyvalue__row {
	display: grid;
	grid-template-columns: 1fr 1fr;
	position: relative;
}

.connector-keyvalue__key-label,
.connector-keyvalue__value-label {
	font-weight: 600;
	font-size: 12px;
	padding: 10px 0 3px 5px;
	opacity: 0.6;
}

.connector-keyvalue__cell {
	border: 1px solid var(--sl-input-border-color);
	border-top: 0;
	border-right: 0;
	display: flex;
	align-items: center;
}

.connector-keyvalue__draggable-wrapper:nth-child(2) .connector-keyvalue__cell,
.connector-keyvalue__grid > .connector-keyvalue__row:nth-child(2) .connector-keyvalue__cell {
	border-top: 1px solid var(--sl-input-border-color);
}

.connector-keyvalue__cell > * {
	width: 100%;
}

.connector-keyvalue__cell:last-of-type {
	border-right: 1px solid var(--sl-input-border-color);
}

.connector-keyvalue__draggable-wrapper {
	position: relative;
}

.connector-keyvalue__draggable-wrapper .draggable-wrapper__handle {
	position: absolute;
	left: -25px;
	z-index: 999;
	height: 100%;
	border: 0;
	cursor: pointer;
	background-color: transparent;
	font-size: 18px;
	display: flex;
	align-items: center;
	justify-content: center;
	color: var(--sl-color-primary-600);
}

.connector-keyvalue__cell ::part(form-control-label) {
	display: none;
}

.connector-keyvalue__cell ::part(base),
.connector-keyvalue__cell ::part(control) {
	border: 0;
	box-shadow: none;
}

.connector-keyvalue__remove-row {
	position: absolute;
	right: 0;
	top: 50%;
	transform: translate(50%, -50%);
	font-size: 13px;
	background-color: var(--bg-primary);
	padding: 5px;
	color: var(--sl-color-danger-600);
	border-radius: 100%;
}

.connector-keyvalue__add-row {
	margin: 10px auto 0 auto;
	display: block;
	font-size: 17px;
	color: var(--sl-color-neutral-600);
}

.connector-keyvalue sl-icon {
	cursor: pointer;
}

.connector-keyvalue .overlay-row {
	position: relative;
}

.connector-keyvalue .overlay-row .overlay-row__handle {
	position: absolute;
	left: -25px;
	z-index: 999;
	height: 100%;
	border: 0;
	cursor: pointer;
	background-color: transparent;
	font-size: 18px;
	display: flex;
	align-items: center;
	justify-content: center;
	color: var(--sl-color-primary-600);
}

.connector-keyvalue .overlay-row .connector-keyvalue__remove-row {
	display: none;
}

.connector-keyvalue .overlay-row .connector-keyvalue__cell {
	border-top: 1px solid var(--sl-input-border-color);
}

